argocd/manifests/authentik-resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-server-httproute
  namespace: authentik
spec:
  parentRefs:
    - name: gateway
      namespace: nginx-gateway
      sectionName: authentik-listener
  hostnames:
    - authentik.lutergs.dev
    - argocd.lutergs.dev
    - longhorn.lutergs.dev
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
